--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       overflow: hidden;
       font-family: 'Segoe UI', sans-serif;
       background: url('birthday-bg.jpg.png') no-repeat center center fixed;
-      background-size: cover;
+      background-size: contain;
     }
 
     .overlay {
