--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       overflow: hidden;
       font-family: 'Segoe UI', sans-serif;
       background: url('birthday-bg.jpg.png') no-repeat center center fixed;
-      background-size: contain;
+      background-size: auto;
     }
 
     .overlay {
@@ -25,7 +25,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(2px);
       background-color: rgba(255, 255, 255, 0.2);
       z-index: 10;
       transition: backdrop-filter 0.5s ease;
